# ai-engineer-test

./: .gitignore  README.md  output.json  pyproject.toml  requirements.txt
.planning/: PROJECT.md  config.json
src/: batch_processor.py  gemini_client.py  main.py  models.py  pdf_converter.py  pdf_handler.py  prompts.py
src/api/: __init__.py  client.py  prompts.py  vision.py
