[project]
name = "ai-engineer-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==1.2.7",
    "langchain-anthropic==1.3.1",
    "langchain-community==0.4.1",
    "pdf2image~=3.0.0",
    "Pillow>=10.0.0",
]
